<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Otp">

    <LinearLayout android:id="@+id/user_bio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otpview"
            android:textSize="30sp"
            android:layout_marginTop="59dp"
            android:layout_marginStart="-52dp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="50dp"
            android:text="@string/otpview1"
            android:textSize="17sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otpview2"
            android:textSize="16sp"
            android:layout_marginTop="7dp"
            android:layout_marginStart="-32dp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/inputtotp1"
                android:layout_width="48dp"
                android:layout_height="50dp"
                android:background="@drawable/backgroundbox"
                android:gravity="center"
                android:hint="@string/a_12"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="Label-for,LabelFor" />

            <EditText
                android:id="@+id/inputtotp3"
                android:layout_width="48dp"
                android:layout_height="50dp"
                android:layout_marginStart="9dp"
                android:background="@drawable/backgroundbox"
                android:gravity="center"

                android:hint="@string/a_13"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="Label-for,LabelFor" />

            <EditText
                android:id="@+id/inputtotp2"
                android:layout_width="48dp"
                android:layout_height="50dp"
                android:layout_marginStart="9dp"
                android:background="@drawable/backgroundbox"
                android:gravity="center"
                android:hint="@string/a_14"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="Label-for,LabelFor" />

            <EditText
                android:id="@+id/inputtotp4"
                android:layout_width="48dp"
                android:layout_height="50dp"
                android:layout_marginStart="9dp"
                android:background="@drawable/backgroundbox"
                android:gravity="center"
                android:hint="@string/a_15"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="Label-for,LabelFor" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_sub"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="44dp"
            android:layout_marginRight="30dp"
            android:padding="6dp"
            android:text="@string/a_2"
            android:background="@drawable/btn_shape"
            android:textAllCaps="false"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/tv_alrady_have_an_acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/z_1"
            android:layout_marginTop="4dp"
            android:textSize="18sp"
            android:layout_marginStart="10dp"/>
        <TextView
            android:id="@+id/em_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="4dp"
            android:text="@string/z_2"
            android:textColor="#6153c3"
            android:textSize="18sp"
            android:textStyle="bold">
        </TextView>


    </LinearLayout>


</ScrollView>