<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <!--    xmlns:tools="http://schemas.android.com/tools"-->
    <!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--    app:cardCornerRadius="30dp"-->
    <!--    android:layout_marginBottom="-30dp"-->
    <!--    android:background="@color/white"-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="@color/white">

        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:src="@drawable/bottom"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:importantForAccessibility="no" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="350dp"
            android:textSize="26sp"
            android:textStyle="bold"
            android:layout_marginStart="50dp"
            android:text="@string/r_1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/r_3"
            android:layout_marginStart="60dp"
            android:layout_marginTop="400dp"
            />

        <Button
            android:id="@+id/btn_hompage"
            android:layout_width="172dp"
            android:layout_height="59dp"
            android:layout_marginStart="100dp"
            android:text="@string/r_4"
            android:background="@drawable/btn_shape"
            android:layout_marginTop="440dp"
            android:layout_marginBottom="10dp"
            />



    </RelativeLayout>
</androidx.cardview.widget.CardView>